# sunmoon-data-crawler

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.py  crontab.txt  mypy.ini  pyproject.toml  requirements.txt  update.sh
app/src/: items.py  middlewares.py  models.py  pipelines.py  settings.py
app/src/data/: table_operations.py
app/src/spiders/: sunmoon_spider.py
app/src/utils/: constants.py  spider_utils.py
crawler/: utils.py
crawler/infra/: sql.py
crawler/utils/: logger.py  utils.py
docker/: docker-compose.yml
shell/: update.sh
spider/: items.py  models.py  pipelines.py  settings.py
spider/spider_utils/: logger.py
spider/spider_utils/db/: __init__.py  db_adapter.py
spider/spiders/: sunmoon_spider.py
spider/utils/: constants.py  db_adapter.py  spider_utils.py
tests/data/: table_operations.py
